--- a/componenets/Layout/Layout.module.css
+++ b/componenets/Layout/Layout.module.css
@@ -3,8 +3,7 @@
   flex-direction: column;
   align-items: center;
   min-height: calc(100vh - 100px -  70px - 250px);
+  padding: 2rem 0;
 }
 
-.layoutContent {
-  width: 60%;
-}
+
