--- a/componenets/Layout/Layout.module.css
+++ b/componenets/Layout/Layout.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: calc(100vh - 100px -  70px - 250px);
+  min-height: calc(100vh - 100px -  70px - 250px- 2rem);
   padding: 2rem 0;
 }
 
