--- a/styles/SobreNos.module.css
+++ b/styles/SobreNos.module.css
@@ -1,3 +1,7 @@
+.container {
+  width: 40%;
+}
+
 .imageEquipa {
   max-width: 100%;
   max-height: 100%;
@@ -5,7 +9,6 @@
 
 .content_container {
   margin: 40px 0;
-  width: 40%;
 }
 
 .content {
