--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,9 +2,11 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
+  font-family: 'Numans', sans-serif;
   overflow-x: hidden;
+  color: #5f5f5f;
 }
 
 a {
@@ -14,4 +16,10 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+
+.uk-lightbox{
+  background: #000;
+  opacity: 0.3;
 }
