--- a/componenets/Navbar/Navbar.module.css
+++ b/componenets/Navbar/Navbar.module.css
@@ -11,7 +11,7 @@
   padding: 0;
 }
 
-.navbar_container ul li {
+.navbar_link {
   text-transform: uppercase;
   list-style-type: none;
   cursor: pointer;
@@ -22,4 +22,16 @@
 
 .navbar_container ul li:hover {
   background: #d7be97;
+}
+
+@media only screen and (max-width:640px) {
+  .navbar_link {
+    color: #5f5f5f;
+
+
+  }
+
+  .divider {
+    background-color: #ddd;
+  }
 }
