--- a/componenets/Navbar/Navbar.module.css
+++ b/componenets/Navbar/Navbar.module.css
@@ -27,11 +27,40 @@
 @media only screen and (max-width:640px) {
   .navbar_link {
     color: #5f5f5f;
-
-
   }
 
   .divider {
     background-color: #ddd;
   }
+}
+
+.navbar_mobile {
+  position: fixed;
+  background: #fff;
+  top: 0;
+  box-shadow: 0 0 3px 4px #f1f1f1;
+}
+
+.sidenav {
+  display: none;
+  position: absolute;
+  z-index: 1000;
+  background: #fff;
+  width: 100vw;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  animation-duration: 0.4s;
+}
+
+.offcanvas_custom {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  box-sizing: border-box;
+  padding: 20px 20px;
+  overflow-y: hidden;
+  width: 100vw;
+  background: #fff;
 }
