--- a/componenets/Input/Input.module.css
+++ b/componenets/Input/Input.module.css
@@ -28,3 +28,14 @@
   outline: none;
   box-shadow: 1.5px 1.5px 3px 1.5px #dddddd;
 }
+
+
+@media only screen and (max-width: 640px) {
+
+  .input{
+    width: 65%;
+  }
+  .textarea{
+    width: 100%;
+  }
+}
