--- a/componenets/Layout/Layout.module.css
+++ b/componenets/Layout/Layout.module.css
@@ -2,8 +2,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: calc(100vh - 100px -  70px - 250px);
+  min-height: calc(100vh - 100px - 70px - 250px);
   padding: 2rem 0;
 }
 
 
+@media only screen and (max-width:640px) {
+  .layoutContainer {
+    flex-direction: column;
+    min-height: calc(100vh - 99px - 100px);
+    padding: 20px;
+  }
+}
