--- a/styles/Contactos.module.css
+++ b/styles/Contactos.module.css
@@ -23,20 +23,24 @@
   max-height: 85%;
   transition: 0.3s;
 }
+
 .imageContainer img:hover {
   opacity: 0.7;
   cursor: pointer;
 }
 
-.imageContainer> div:nth-child(1) {
-    text-align: end;
+.imageContainer>div:nth-child(1) {
+  text-align: end;
 }
+
 .imageContainer>div:nth-child(2) {
- text-align: start;
+  text-align: start;
 }
+
 .imageContainer>div:nth-child(3) {
   text-align: end;
 }
+
 .imageContainer>div:nth-child(4) {
   text-align: start;
 }
@@ -65,8 +69,7 @@
   margin: 3rem 0;
 }
 
-.contactsGroup {
-}
+.contactsGroup {}
 
 .contactsLabel {
   font-size: 1rem;
@@ -97,22 +100,26 @@
   font-size: 13px;
   margin: 0 0 0 0.3rem;
 }
+
 .check_consentimento {
   /* display: inline-block; */
   width: fit-content;
 }
+
 .check_consentimento {
   position: absolute;
   opacity: 0;
 }
-.check_consentimento + .check_consentimento_style {
+
+.check_consentimento+.check_consentimento_style {
   position: relative;
   cursor: pointer;
   padding: 0;
   margin: 0;
 }
+
 /* Box. */
-.check_consentimento + .check_consentimento_style::before {
+.check_consentimento+.check_consentimento_style::before {
   content: '';
   /* margin-right: 10px; */
   display: inline-block;
@@ -124,16 +131,18 @@
   height: 20px;
 }
 
-.check_consentimento:disabled + .check_consentimento_style:before {
+.check_consentimento:disabled+.check_consentimento_style:before {
   border-radius: 0%;
   border: none;
   background: #f7f7f7;
 }
-.check_consentimento:checked + .check_consentimento_style::before {
+
+.check_consentimento:checked+.check_consentimento_style::before {
   cursor: default;
 }
+
 /* Checkmark. Could be replaced with an image */
-.check_consentimento:checked + .check_consentimento_style::after {
+.check_consentimento:checked+.check_consentimento_style::after {
   content: '\2713';
   text-align: center;
   margin: auto;
@@ -143,4 +152,98 @@
   font-size: 20px;
   font-weight: bold;
   cursor: default !important;
+}
+
+.btn {
+  font-family: 'Numans', sans-serif;
+  margin: 0.3rem 0 0;
+  padding: 0.4rem 1rem;
+  border: 2px solid;
+  background-color: #6e8799;
+  border-color: #6e8799;
+  color: #ffffff;
+  text-transform: uppercase;
+  border-radius: 1.5px;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: rgb(85, 104, 117);
+}
+
+.btn:focus {
+  outline: none;
+  box-shadow: 1.5px 1.5px 3px 1.5px #dddddd;
+}
+
+
+
+@media only screen and (max-device-width:640px) {
+  .container {
+    flex-direction: column;
+    min-height: calc(100vh - 99px - 100px);
+    width: 100%;
+  }
+
+  .imageContainer,
+  .formContainer {
+    width: 100%;
+  }
+
+  .imageContainer {
+    grid-template-columns: 1fr;
+    padding-bottom: 2rem;
+    gap: 20px
+  }
+
+  .imageContainer img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  .imageContainer>div:nth-child(1) {
+    text-align: center;
+  }
+
+  .imageContainer>div:nth-child(2) {
+    text-align: center;
+  }
+
+  .imageContainer>div:nth-child(3) {
+    text-align: center;
+  }
+
+  .imageContainer>div:nth-child(4) {
+    text-align: center;
+  }
+
+  .heading {
+    font-size: 3rem;
+  }
+
+  .formGroup {
+    margin: 1.5rem 0;
+  }
+
+  .subHeading {
+    font-size: 0.9rem;
+  }
+
+  .btn {
+    width: 100%;
+  }
+}
+
+@media only screen and (max-device-width: 320px) {
+  .heading {
+    font-size: 2.7rem;
+  }
+
+  .subHeading {
+    font-size: 0.8rem;
+  }
+
+  .btn {
+    font-size: 11.5px;
+  }
 }
