--- a/styles/SobreNos.module.css
+++ b/styles/SobreNos.module.css
@@ -8,7 +8,7 @@
 }
 
 .content_container {
-  margin: 40px 0;
+  margin: 20px 0 0 0;
 }
 
 .content {
@@ -28,6 +28,6 @@
 
 @media screen and (max-width: 600px){
   .container{
-    width: 85%;
+    width: 100%;
   }
 }
