--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,11 @@ a {
   box-sizing: border-box;
 }
 
+.invalide {
+  border-color: #ff999986 !important;
+  box-shadow: 1.5px 1.5px 3px 1.5px #ff9999 !important;
+}
+
 
 @-webkit-keyframes fadeIn {
   from {
