--- a/styles/404.module.css
+++ b/styles/404.module.css
@@ -3,4 +3,8 @@
   justify-content: center;
   align-items: center;
   font-size: 2rem;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
