--- a/styles/Contactos.module.css
+++ b/styles/Contactos.module.css
@@ -176,7 +176,44 @@
   box-shadow: 1.5px 1.5px 3px 1.5px #dddddd;
 }
 
+.btnContainer {
+  position: relative;
+}
 
+.loader {
+  padding-left: 1rem;
+
+}
+
+@media only screen and (max-device-width:768px) {
+  .container {
+    flex-direction: row;
+    min-height: calc(100vh - 99px - 100px);
+    width: 100%;
+  }
+
+  .imageContainer {
+    grid-template-columns: 1fr;
+    padding-bottom: 2rem;
+    gap: 20px
+  }
+
+  .imageContainer>div:nth-child(1) {
+    text-align: center;
+  }
+
+  .imageContainer>div:nth-child(2) {
+    text-align: center;
+  }
+
+  .imageContainer>div:nth-child(3) {
+    text-align: center;
+  }
+
+  .imageContainer>div:nth-child(4) {
+    text-align: center;
+  }
+}
 
 @media only screen and (max-device-width:640px) {
   .container {
@@ -231,6 +268,14 @@
 
   .btn {
     width: 100%;
+    padding: 12px;
+  }
+
+  .loader {
+    position: absolute;
+    right: 7px;
+    bottom: 7px;
+    color: #fff;
   }
 }
 
@@ -244,6 +289,17 @@
   }
 
   .btn {
-    font-size: 11.5px;
+    font-size: 11px;
   }
+
+  .loader {
+    right: 5px;
+    bottom: 11px;
+
+  }
+
+  .loader svg {
+    width: 20px;
+  }
+
 }
