--- a/componenets/Footer/Footer.module.css
+++ b/componenets/Footer/Footer.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100px;
+  min-height: 100px;
 }
 
 .footer_container a {
