--- a/componenets/Layout/Layout.module.css
+++ b/componenets/Layout/Layout.module.css
@@ -2,15 +2,25 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: calc(100vh - 100px - 70px - 250px);
+  justify-content: center;
   padding: 2rem 0;
+  flex: 1;
 }
-
 
 @media only screen and (max-width:768px) {
   .layoutContainer {
     flex-direction: column;
-    min-height: calc(100vh - 99px - 100px);
     padding: 20px;
   }
+}
+
+@media only screen and (max-width:320px) {
+  .layoutContainer h1 {
+    font-size: 1.8rem;
+  }
+
+  .layoutContainer h3 {
+    font-size: 1.3rem;
+  }
+
 }
