--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,18 @@ body {
   color: #5f5f5f;
 }
 
+html,
+body,
+#__next,
+#__next>div {
+  height: -webkit-fill-available;
+}
+
+#__next>div{
+  display: flex;
+  flex-direction: column;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -23,10 +35,10 @@ a {
   box-shadow: 1px 1px 3px 1px #ff9999a4 !important;
 }
 
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
-  margin: 0; 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 @-webkit-keyframes fadeIn {
