--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,82 +1,86 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
-  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    padding: 0;
+    margin: 0;
+    /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
-  font-family: 'Numans', sans-serif;
-  overflow-x: hidden;
-  color: #5f5f5f;
+    font-family: 'Numans', sans-serif;
+    overflow-x: hidden;
+    color: #5f5f5f;
+}
+
+html,
+body{
 }
 
 html,
 body,
 #__next,
-#__next>div {
-  /* height: -webkit-fill-available; */
+#__next > div {
+    height: 100%;
 }
 
-#__next>div{
-  display: flex;
-  flex-direction: column;
+#__next > div {
+    display: flex;
+    flex-direction: column;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .invalide {
-  border-color: #ff999981 !important;
-  box-shadow: 1px 1px 3px 1px #ff9999a4 !important;
+    border-color: #ff999981 !important;
+    box-shadow: 1px 1px 3px 1px #ff9999a4 !important;
 }
 
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 @-webkit-keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
+    from {
+        opacity: 0;
+    }
 
-  to {
-    opacity: 1;
-  }
+    to {
+        opacity: 1;
+    }
 }
 
 @keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
+    from {
+        opacity: 0;
+    }
 
-  to {
-    opacity: 1;
-  }
+    to {
+        opacity: 1;
+    }
 }
 
 @-webkit-keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
+    from {
+        opacity: 1;
+    }
 
-  to {
-    opacity: 0;
-  }
+    to {
+        opacity: 0;
+    }
 }
 
 @keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
+    from {
+        opacity: 1;
+    }
 
-  to {
-    opacity: 0;
-  }
+    to {
+        opacity: 0;
+    }
 }
