--- a/componenets/Banner/Banner.module.css
+++ b/componenets/Banner/Banner.module.css
@@ -2,19 +2,24 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 250px;
+    /* height: 250px; */
     width: 100vw;
+    margin-top: 40px;
+    padding: 30px 0;
+    /* margin: 50px; */
+    /* position: fixed; */
+    background: #e1d7d3;
 }
 
 .banner_container img {
-    transform: scale(0.7);
+    transform: scale(0.8);
 }
 
-.bannerSidenav_container{
-    margin: 17px ;
+.bannerSidenav_container {
+    margin: 15px;
 }
 
 .bannerSidenav_container img {
-    min-height: 65px;
-    max-height: 65px;
+    min-height: 70px;
+    max-height: 70px;
 }
