--- a/componenets/Navbar/Navbar.module.css
+++ b/componenets/Navbar/Navbar.module.css
@@ -1,69 +1,109 @@
+.nav_header_container {
+}
+
+.nav_custom {
+    width: 100%;
+}
+
+.nav_border {
+    top: 0;
+    width: 100%;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    background-color: #fff;
+    z-index: 10000;
+    padding: 8px 0;
+    /* border: 1px solid #ddd; */
+    border-left: none;
+    border-right: none;
+    border-top: none;
+    text-align: center;
+    background: #e1d7d3;
+}
+
 .navbar_container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 70px;
 }
 
 .navbar_container ul {
-  display: flex;
-  justify-content: center;
-  padding: 0;
+    display: flex;
+    justify-content: center;
+    padding: 0;
 }
 
 .navbar_link {
-  text-transform: uppercase;
-  list-style-type: none;
-  cursor: pointer;
-  padding: 0.5rem 2rem;
-  color: #262626;
-  transition: 0.4s;
+    text-transform: uppercase;
+    list-style-type: none;
+    cursor: pointer;
+    padding: 0.5rem 2rem;
+    color: #84817f;
+    transition: 0.4s;
+    letter-spacing: 6px;
 }
-
 
 .navbar_container ul li:hover {
-  background: #d7be97;
-  
+    background: #d7be97;
 }
 
-@media only screen and (max-width:640px) {
-  .navbar_link {
-    color: #5f5f5f;
-  }
+@media only screen and (max-width: 640px) {
+    .navbar_link {
+        /* color: #5f5f5f; */
+    }
 
-  .divider {
-    background-color: #ddd;
-  }
+    .divider {
+        background-color: #ddd;
+    }
 }
 
 .navbar_mobile {
-  position: fixed;
-  background: #fff;
-  top: 0;
-  box-shadow: 0 0 5px 2px #f1f1f1;
-  z-index: 1000;
+    position: fixed;
+    background: #e1d7d3;
+    top: 0;
+    /* box-shadow: 0 0 5px 2px #f1f1f1; */
+    /* border: 1px solid #e2e2e2; */
+    border-left: none;
+    border-right: none;
+    border-top: none;
+    z-index: 1000;
 }
 
 .sidenav {
-  display: none;
-  position: absolute;
-  z-index: 1000;
-  background: #fff;
-  width: 100vw;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  animation-duration: 0.5s;
+    display: none;
+    position: absolute;
+    z-index: 1000;
+    background: #fff;
+    width: 100vw;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    animation-duration: 0.5s;
+}
+
+.hamburger {
+    position: absolute;
+    height: 100%;
+    right: 7px;
+    top: -20px;
+    padding: 0 20px !important;
 }
 
 .offcanvas_custom {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  box-sizing: border-box;
-  padding: 20px 20px;
-  overflow-y: hidden;
-  width: 100vw;
-  background: #fff;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    box-sizing: border-box;
+    padding: 20px 20px;
+    overflow-y: hidden;
+    width: 100vw;
+    background: #fff;
+}
+
+
+.navbar_mobile a svg {
+    width: 17px;
 }
