--- a/styles/Portfolio.module.css
+++ b/styles/Portfolio.module.css
@@ -1,11 +1,28 @@
 .groupHeader {
-    font-family: 'Dawning of a New Day', cursive;
-    font-size: 2.6rem;
+    /* font-family: 'Dawning of a New Day', cursive; */
+    font-size: 1.3rem;
+    letter-spacing: 9px;
     color: #808080;
+    display: block;
     /* font-weight: 600; */
+    text-transform: uppercase;
+    margin: 20px 0;
+    text-align: center;
 }
 @media only screen and (min-device-width: 768px) {
     .imageContainer {
         padding: 0 80px;
     }
+}
+@media only screen and (max-device-width: 768px) {
+    .groupHeader {
+        font-size: 0.7rem;
+        margin: 15px 0;
+         letter-spacing: 6px;
+    }
+}
+@media only screen and (max-device-width: 640px) {
+}
+
+@media only screen and (max-device-width: 320px) {
 }
