--- a/styles/SobreNos.module.css
+++ b/styles/SobreNos.module.css
@@ -1,33 +1,40 @@
 .container {
-  width: 40%;
+    width: 40%;
 }
 
 .imageEquipa {
-  max-width: 100%;
-  max-height: 100%;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .content_container {
-  margin: 20px 0 0 0;
+    margin: 20px 0 0 0;
 }
 
 .content {
-  text-indent: 1.5em;
-  line-height: 1.6rem;
-  white-space: pre-wrap;
+    text-indent: 1.5em;
+    font-size: 0.9rem;
+    line-height: 1.6rem;
+    white-space: pre-wrap;
+    letter-spacing: 0.5px;
 }
 
 .content_signature {
-  font-family: 'Dawning of a New Day', cursive;
-  margin-top: 1.5rem;
-  text-indent: 0rem;
-  font-size: 2.7rem;
-  color: #a9c7ca;
-  text-align: center;
+    font-family: 'Dawning of a New Day', cursive;
+    margin-top: 1.5rem;
+    text-indent: 0rem;
+    font-size: 2.7rem;
+    color: #a9c7ca;
+    text-align: center;
 }
 
-@media screen and (max-width: 600px){
-  .container{
-    width: 100%;
-  }
+@media only screen and (max-device-width: 768px) {
+}
+@media only screen and (max-device-width: 640px) {
+    .container {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-device-width: 320px) {
 }
