--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,12 +5,12 @@ body {
     /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
     font-family: 'Numans', sans-serif;
-    overflow-x: hidden;
-    color: #5f5f5f;
+    /* color: #5f5f5f; */
+    color: #bab6b1;
 }
 
-html,
-body{
+body {
+    overflow-x: hidden;
 }
 
 html,
