--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: 'MyWebFont';
+    src: url('../assets/fonts/himalaya.ttf'); /* IE9 Compat Modes */
+    src:
+        /* Modern Browsers */ url('../assets/fonts/himalaya.ttf') format('truetype');
+}
+
 html,
 body {
     padding: 0;
@@ -5,8 +12,11 @@ body {
     /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
     font-family: 'Numans', sans-serif;
+    /* font-family: "Microsoft Himalaya"; */
+    /* font-family: "Times New Roman", Times, serif; */
     /* color: #5f5f5f; */
     color: #bab6b1;
+    /* font-size: 1.6rem; */
 }
 
 body {
